# advent-of-code

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2021/: day1.py  day10.py  day11.py  day12.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
2022/: day1.py  day11.py  day13.py  day14.ipynb  day2.py  day3.py  day4.py  day5.py  day6.py
2022/utils/: compare.py  io.py  xy.py
advent_of_code/: cmd.py  compare.py  io.py  xy.py
advent_of_code/2020/: day1.py  day11.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
advent_of_code/2021/: day11.py  day12.py  day13.py  day15.py  day6.py  day8.py  day9.py
advent_of_code/2022/: day10.py  day12.py  day15.ipynb  day16.ipynb  day3.py  day7.py  day8.py  day9.py
advent_of_code/2022/utils/: io.py
advent_of_code/y2023/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d19.py  d2.py  d20.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
data/y2023/: d2_limit.txt
tests/: test_xy.py
